# django-impersonate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  publish_test.yml
impersonate/: admin.py  middleware.py
impersonate/templates/: impersonate.html
testapp/: requirements.txt
testapp/testapp/: admin.py  settings.py
testapp/testapp/migrations/: 0001_create_users.py
testapp/tests/: test_generic.py
